# Ceibo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tareas.odt
dependencies/MiSFML/lib/: sfml-main-s-d.lib  sfml-network-s-d.lib  sfml-system-s-d.lib
dependencies/SFML/examples/window/: Window.cpp
dependencies/glfw64/: README.md
docs/: .~lock.tareas.odt#  diagramSecuenciaPrincipal.md  diagramSecuenciaPrograma.md  diagramaSecuenciaView.md
includes/: GraphConstructor.hpp  ViewManager.hpp
src/: Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  ViewManager.cpp  auxiliar.txt  controller.cpp  controller.hpp  main.cpp  model.cpp  model.hpp  view.cpp  view.hpp
src/GraphConstructor/: Edge.cpp  GraphConstructor.cpp  Node.cpp
src/ViewManager/: ViewManager.cpp  layout.hpp
src/utilitis/: layout.cpp  layout.hpp
